--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "refactored-octo-palm-tree",
+  "name": "node-js-template",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/pedrinholemes/refactored-octo-palm-tree",
-  "author": "Pedro Henrique Lemes Da Silva <59403164+pedrinholemes@users.noreply.github.com>",
+  "repository": "https://github.com/pedrinholemes/nodejs-template",
+  "author": "Pedro Henrique Lemes Da Silva <pedroca21265@gmail.com>",
   "license": "MIT"
 }
